--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 .matriz-container {
   border: solid 1px #ccc;
-  max-width: 700px;
+  max-width: 70vw;
   height: 500px;
   margin: 20px auto 0;
   border-radius: 5px;
@@ -13,5 +13,29 @@
 
 .matriz-container table {
   text-align: center;
+  width: 100%;
+}
+
+.indice-h {
+  background: lime;
+}
+
+.indice-v {
+  background: silver;
+  vertical-align: middle !important;
+}
+
+.dropdown-toggle {
+  width: 5rem;
+}
+
+.color {
+  width: 1rem;
+  height: 1rem;
+  background-color: #ccc;
+  display: inline-block;
+  border-radius: 100%;
+  vertical-align: -3px;
+  margin-right: .5rem;
 }
 /*# sourceMappingURL=style.css.map */
