--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,2 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.matriz-container {
-  border: solid 1px #ccc;
-  max-width: 70vw;
-  height: 500px;
-  margin: 20px auto 0;
-  border-radius: 5px;
-}
-
-.matriz-container table {
-  text-align: center;
-  width: 100%;
-}
-
-.indice-h {
-  background: lime;
-}
-
-.indice-v {
-  background: silver;
-  vertical-align: middle !important;
-}
-
-.dropdown-toggle {
-  width: 5rem;
-}
-
-.color {
-  width: 1rem;
-  height: 1rem;
-  background-color: #ccc;
-  display: inline-block;
-  border-radius: 100%;
-  vertical-align: -3px;
-  margin-right: .5rem;
-}
+*{margin:0;padding:0}.matriz-container{border:solid 1px #ccc;max-width:70vw;height:500px;margin:20px auto 0;border-radius:5px}.matriz-container table{text-align:center;width:100%}.indice-h{background:lime}.indice-v{background:silver;vertical-align:middle !important}.dropdown-toggle{width:5rem}.color{width:1rem;height:1rem;background-color:#bbb;display:inline-block;border-radius:100%;vertical-align:-3px;margin-right:.5rem}
 /*# sourceMappingURL=style.css.map */
