--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@
 .color {
     width: 1rem;
     height: 1rem;
-    background-color: #ccc;
+    background-color: #bbb;
     display: inline-block;
     border-radius: 100%;
     vertical-align: -3px;
