--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
 
 .matriz-container {
     border: solid 1px #ccc;
-    max-width: 70vw;
+    max-width: 80%;
     height: 500px;
     margin: 20px auto 0;
     border-radius: 5px;
@@ -23,6 +23,37 @@
 .indice-v {
     background: silver;
     vertical-align: middle !important;
+    text-align: center !important;
+
+    .txtarea {
+        width: 100%;
+        height: 100%;
+        // text-align: center;
+        // resize: none;
+        // display: table-cell;
+        // vertical-align: middle;
+    }
+
+    .txtdiv {
+        width: 7rem;
+        height: 5rem;
+        display: flex;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+        border: solid 1px #888;
+        border-radius: 5px;
+        font-size: .9rem;
+
+        &:focus {
+            outline: none;
+            background-color: #fff;
+        }
+
+        &:hover {
+            background-color: #ccc;
+        }
+    }
 }
 
 .dropdown-toggle {
